:sparkles: Feat :  홈 화면 UI 구성 - HomeFragment 클래스 생성 - 상단에 메뉴 버튼 배치 - 상단에 검색창 배치 - 하단에 카메라 버튼 배치 - 하단에 내 위치 근처 충전소 버튼 배치 - 하단에 현재 위치 버튼 배치 - 중앙에 네이버 맵 배치
Related to: #19

--- a/AOS/app/src/main/res/values/themes.xml
+++ b/AOS/app/src/main/res/values/themes.xml
@@ -3,7 +3,11 @@
     <style name="Base.Theme.CarBap" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowBackground">@color/gray_000</item>
+        <item name="colorPrimary">@color/main_400</item>
+        <item name="android:statusBarColor">@color/main_300</item>
     </style>
 
     <style name="Theme.CarBap" parent="Base.Theme.CarBap" />
+
 </resources>
