--- a/AOS/app/src/main/res/values/colors.xml
+++ b/AOS/app/src/main/res/values/colors.xml
@@ -2,4 +2,24 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="gray_000">#FFFFFF</color>
+    <color name="gray_050">#F6F6F9</color>
+    <color name="gray_100">#E9EBF2</color>
+    <color name="gray_200">#CED1DF</color>
+    <color name="gray_300">#B1B4C6</color>
+    <color name="gray_400">#9092A3</color>
+    <color name="gray_500">#7A7C8A</color>
+    <color name="gray_600">#5D5F6C</color>
+    <color name="gray_700">#3C3E49</color>
+    <color name="gray_800">#1C1C25</color>
+
+    <color name="main_100">#D0D5FF</color>
+    <color name="main_200">#AFB7FF</color>
+    <color name="main_300">#7E8BFF</color>
+    <color name="main_400">#4D5FFF</color>
+
+    <color name="success">#4D5FFF</color>
+    <color name="error">#EB4848</color>
+
 </resources>
