🎨Fix : 레이아웃 내 컴포넌트 크기 설정 방식 수정 - Constraint layout 내의 화면 크기의 width, height 속성 값을 match_parent -> 0dp로 수정
Related to: #19

--- a/AOS/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/AOS/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -7,8 +7,10 @@
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:id="@+id/drag_handle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:tint="@color/gray_300" />
 
@@ -63,9 +65,10 @@
     </com.google.android.material.chip.ChipGroup>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/order_chip_group"
         android:layout_marginTop="26dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/order_chip_group" />
 </androidx.constraintlayout.widget.ConstraintLayout>
