--- a/AOS/app/src/main/res/layout/fragment_login.xml
+++ b/AOS/app/src/main/res/layout/fragment_login.xml
@@ -113,6 +113,7 @@
             app:layout_constraintTop_toBottomOf="@id/password_layout" />
 
         <TextView
+            android:id="@+id/tv_signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="21dp"
