:lipstick: Fix : 회원 가입 화면 관련 프래그먼트 UI 수정 - 네비게이션 전환 방식 변경을 위해 SignUpFragment 화면에 버튼 제거 - 두 자식 프래그먼트에 RegisterNicknameFragment, RegisterEmailPasswordFragment에 버튼 추가 Related to: #41

--- a/AOS/app/src/main/res/layout/fragment_register_email_password.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_email_password.xml
@@ -9,8 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="40dp"
+        android:layout_height="match_parent"
         tools:context=".RegisterEmailPasswordFragment">
 
         <androidx.constraintlayout.widget.Guideline
@@ -141,6 +140,19 @@
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <Button
+            android:id="@+id/btn_next"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
+            android:paddingVertical="20dp"
+            android:text="@string/next"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
