--- a/AOS/app/src/main/res/layout/fragment_register_nickname.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_nickname.xml
@@ -74,6 +74,16 @@
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
             app:layout_constraintTop_toBottomOf="@id/nickname_layout" />
 
-
+        <Button
+            android:id="@+id/btn_complete_signup"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:paddingVertical="20dp"
+            android:text="@string/complete_signup"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
