:lipstick: Fix : 회원 가입 관련 네비게이션 파일 수정 - 닉네임 입력 화면에서 이메일, 패스워드 입력 화면으로 이동하는 액션 제거
Related to: #41

--- a/AOS/app/src/main/res/navigation/signup_graph.xml
+++ b/AOS/app/src/main/res/navigation/signup_graph.xml
@@ -18,9 +18,5 @@
         android:id="@+id/registerNicknameFragment"
         android:name="com.softeer.team6four.RegisterNicknameFragment"
         android:label="RegisterNicknameFragment"
-        tools:layout="@layout/fragment_register_nickname">
-        <action
-            android:id="@+id/action_registerNicknameFragment_to_registerEmailPasswordFragment"
-            app:destination="@id/registerEmailPasswordFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_register_nickname"/>
 </navigation>
