:lipstick: Fix : 회원 가입 화면 버튼 텍스트 스타일 수정 - 회원가입 화면에서 다음, 완료 버튼 텍스트 스타일을 볼드체로 수정 Related to: #41

--- a/AOS/app/src/main/res/layout/fragment_register_nickname.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_nickname.xml
@@ -82,6 +82,7 @@
             android:paddingVertical="20dp"
             android:text="@string/complete_signup"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
