--- a/AOS/app/src/main/res/layout/fragment_register_email_password.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_email_password.xml
@@ -150,6 +150,7 @@
             android:paddingVertical="20dp"
             android:text="@string/next"
             android:textSize="16sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
