:art: Refactor : UI 패키지 분리 - UI 패키지를 생성하고 각 화면을 담당하는 패키지로 분리
Related to: #62

--- a/AOS/app/src/main/res/layout/fragment_my_point.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_point.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MyPointFragment">
+        tools:context=".ui.mypage.point.MyPointFragment">
 
         <TextView
             android:layout_width="match_parent"
