--- a/AOS/app/src/main/res/layout/fragment_home.xml
+++ b/AOS/app/src/main/res/layout/fragment_home.xml
@@ -13,7 +13,7 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".HomeFragment">
+            tools:context=".ui.home.HomeFragment">
 
             <ImageButton
                 android:id="@+id/btn_menu"
