--- a/AOS/app/src/main/res/layout/fragment_login.xml
+++ b/AOS/app/src/main/res/layout/fragment_login.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LoginFragment">
+        tools:context=".ui.login.LoginFragment">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/start_guide_line"
