--- a/AOS/app/src/main/res/layout/fragment_my_charger.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_charger.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MyChargerFragment">
+        tools:context=".ui.mypage.charger.MyChargerFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
