--- a/AOS/app/src/main/res/layout/fragment_my_reservation.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_reservation.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MyReservationFragment">
+        tools:context=".ui.mypage.reservation.MyReservationFragment">
 
         <!-- TODO: Update blank fragment layout -->
         <TextView
