--- a/AOS/app/src/main/res/values/dimens.xml
+++ b/AOS/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="radius_normal">8dp</dimen>
     <dimen name="searchbar_stroke_width">2dp</dimen>
     <dimen name="btn_show_charger_list_radius">100dp</dimen>
+    <dimen name="step_line_radius">7dp</dimen>
 </resources>
