--- a/AOS/app/src/main/res/layout/fragment_register_charger.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_charger.xml
@@ -40,13 +40,16 @@
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/register_frag_container"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="12dp"
+            app:defaultNavHost="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ib_back" />
+            app:layout_constraintTop_toBottomOf="@id/ib_back"
+            app:navGraph="@navigation/register_graph" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
