:lipstick: Feat : ConditionCheckFragment 화면 UI 구성 - 공유 조건 화면을 담당하는 ConditionCheckFragment 클래스 화면 UI 구성 - register_graph.xml 파일에 ConditionCheckFragment를 destination으로 추가
Related to: #63

--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -10,4 +10,9 @@
         android:name="com.softeer.team6four.ui.mypage.register.RegisterOnboardingFragment"
         android:label="RegisterOnboardingFragment"
         tools:layout="@layout/fragment_register_onboarding"/>
+    <fragment
+        android:id="@+id/conditionCheckFragment"
+        android:name="com.softeer.team6four.ui.mypage.register.ConditionCheckFragment"
+        android:label="ConditionCheckFragment"
+        tools:layout="@layout/fragment_condition_check"/>
 </navigation>
