:lipstick: Feat : RegisterOnboardingFragment -> ConditionCheckFragment 화면 전환 작업 - fragment_register_onboarding.xml 버튼 id 추가 - register_graph.xml 파일 화면 전환 작업을 위한 action 추가 - RegisterOnboardingFragment 클래스에서 버튼 클릭 시 화면 전환 기능 구현
Related to: #63

--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -9,7 +9,11 @@
         android:id="@+id/registerOnboardingFragment"
         android:name="com.softeer.team6four.ui.mypage.register.RegisterOnboardingFragment"
         android:label="RegisterOnboardingFragment"
-        tools:layout="@layout/fragment_register_onboarding"/>
+        tools:layout="@layout/fragment_register_onboarding">
+        <action
+            android:id="@+id/action_registerOnboardingFragment_to_conditionCheckFragment"
+            app:destination="@id/conditionCheckFragment" />
+    </fragment>
     <fragment
         android:id="@+id/conditionCheckFragment"
         android:name="com.softeer.team6four.ui.mypage.register.ConditionCheckFragment"
