--- a/AOS/app/src/main/res/layout/fragment_register_onboarding.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_onboarding.xml
@@ -144,6 +144,7 @@
 
 
         <Button
+            android:id="@+id/btn_next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
