--- a/AOS/app/src/main/res/values/dimens.xml
+++ b/AOS/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="btn_show_charger_list_radius">100dp</dimen>
     <dimen name="step_line_radius">7dp</dimen>
     <dimen name="progress_bar_radius">7dp</dimen>
+    <dimen name="register_location_searchbar_radius">12dp</dimen>
 </resources>
