:lipstick: Feat : ConditionCheckFragment -> RegisterLocationFragment 화면 전환 기능 구현 - register_graph.xml 파일에서 RegisterLocationFragment destination 추가 - 조건 확인 화면에서 다음 버튼 클릭 시 카밥 위치 등록 화면 등록 화면 전환 기능 구현
Related to: #63

--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -18,5 +18,14 @@
         android:id="@+id/conditionCheckFragment"
         android:name="com.softeer.team6four.ui.mypage.register.ConditionCheckFragment"
         android:label="ConditionCheckFragment"
-        tools:layout="@layout/fragment_condition_check"/>
+        tools:layout="@layout/fragment_condition_check">
+        <action
+            android:id="@+id/action_conditionCheckFragment_to_registerLocationFragment"
+            app:destination="@id/registerLocationFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerLocationFragment"
+        android:name="com.softeer.team6four.ui.mypage.register.RegisterLocationFragment"
+        android:label="RegisterLocationFragment"
+        tools:layout="@layout/fragment_register_location" />
 </navigation>
