:lipstick: Feat : RegisterDetailFragment 화면 UI 구성 - 카밥 상세정보를 등록하는 화면을 담당하는 RegisterDetailFragment UI 컴포넌트 배치
Related to: #63

--- a/AOS/app/src/main/res/values/themes.xml
+++ b/AOS/app/src/main/res/values/themes.xml
@@ -25,5 +25,7 @@
         <item name="android:textColor">@color/chip_text_color</item>
         <item name="chipBackgroundColor">@color/chip_background_color</item>
         <item name="chipStrokeWidth">0dp</item>
+        <item name="chipEndPadding">8dp</item>
+        <item name="chipStartPadding">8dp</item>
     </style>
 </resources>
