:lipstick: Fix : RegisterDetailFragment 화면 UI 수정 - Chip Group의 singleSelection 속성을 true로 설장하여 한 개만 선택할 수 있도록 수정 - chipMinTouchTargetSize 속성을 0dp로 설정하여 chip 패딩 값 변경
Related to: #63

--- a/AOS/app/src/main/res/layout/fragment_register_detail.xml
+++ b/AOS/app/src/main/res/layout/fragment_register_detail.xml
@@ -105,7 +105,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_charger_location_type">
+            app:layout_constraintTop_toBottomOf="@id/tv_charger_location_type"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_house"
@@ -154,7 +155,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_charger_adapter_type">
+            app:layout_constraintTop_toBottomOf="@id/tv_charger_adapter_type"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_slow_speed"
@@ -203,7 +205,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_charger_speed">
+            app:layout_constraintTop_toBottomOf="@id/tv_charger_speed"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_speed_3kwh"
@@ -252,7 +255,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
-            app:layout_constraintTop_toBottomOf="@id/tv_charger_install_type">
+            app:layout_constraintTop_toBottomOf="@id/tv_charger_install_type"
+            app:singleSelection="true">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip_outside"
