--- a/AOS/app/src/main/res/values/themes.xml
+++ b/AOS/app/src/main/res/values/themes.xml
@@ -27,5 +27,6 @@
         <item name="chipStrokeWidth">0dp</item>
         <item name="chipEndPadding">8dp</item>
         <item name="chipStartPadding">8dp</item>
+        <item name="chipMinTouchTargetSize">0dp</item>
     </style>
 </resources>
