:lipstick: Feat : RegisterLocationFragment -> RegisterDetailFragment 화면 전환 기능 구현 - register_graph.xml 파일에 destination으로 RegisterDetailFragment 추가 - register_graph.xml 파일에 화면 전환 action 추가 - RegisterLocationFragment 버튼 클릭시 화면 전환 기능 구현
Related to: #63

--- a/AOS/app/src/main/res/navigation/register_graph.xml
+++ b/AOS/app/src/main/res/navigation/register_graph.xml
@@ -27,5 +27,14 @@
         android:id="@+id/registerLocationFragment"
         android:name="com.softeer.team6four.ui.mypage.register.RegisterLocationFragment"
         android:label="RegisterLocationFragment"
-        tools:layout="@layout/fragment_register_location" />
+        tools:layout="@layout/fragment_register_location" >
+        <action
+            android:id="@+id/action_registerLocationFragment_to_registerDetailFragment"
+            app:destination="@id/registerDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerDetailFragment"
+        android:name="com.softeer.team6four.ui.mypage.register.RegisterDetailFragment"
+        android:label="RegisterDetailFragment"
+        tools:layout="@layout/fragment_register_detail"/>
 </navigation>
